tmc-langs-qmake/src/test/resources/invalid_quick_project/test_runner/ClickerTest.qml
import QtQuick 2.0
import "../src" 1.00

Clicker {
    // Invalid test file, property not found
    clickedType: "Click"
    width: 350
    height: 200
    anchors.centerIn: parent
}
